# platoon_ops_merge_spilt_turtlebot3

./: CMakeLists.txt  README.md  package.xml
include/turtlebot3/: cpp_header.hpp
launch/: leader_follower.launch.py  one_bot.launch.py  start.launch.py
models/cylinder_v/: model.config  model.sdf
models/turtlebot3/: model.config  model_burger.sdf  model_waffle.sdf  model_waffle_red.sdf
models/turtlebot3/urdf/: turtlebot3_waffle.urdf
models/worlds/: empty_world.world  empty_world_cylinder.world
scripts/: follower_move.py  platoon_info_handler.py  plot_node.py  ref_state.py  save_csv.py  test_move.py  update_var.py  vars_script.py
src/: cpp_node.cpp
